syntax = "proto3";
package proto.providers;

option go_package = "config/deploymentConfigurations/providers";

// Configuration for the clouddriver microservice.
message Ecs {

    bool enabled = 1;
    string primaryAccount = 2;
    repeated EcsAcc Account = 3;
    // BakeryDefaults bakeryDefault = 4;
    // string accessKey = 5;
    // string secretAccessKey = 6;
    // string defaultKeyPairTemplate = 7;
    // repeated string defaultRegions = 8;
    // AwsDefaults defaults = 9;
    
}

message EcsAcc {

    string name = 1;
    repeated string requiredGroupMembership = 2;
    repeated string permissions = 3;
    string awsAccount = 4;

}